--- a/product-catalog-optimization/package.json
+++ b/product-catalog-optimization/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.7.2",
+    "csv-parser": "^3.0.0",
     "jest": "^28.1.3",
     "lodash": "^4.17.21",
     "minimist": "^1.2.6",
